--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,6 +90,15 @@ h2{
     width: 85%;
 }
 
+.mid{
+    border-style: solid;
+    border-width: 2px;
+    border-top-width: 0;
+    border-color: #B1AFFF;
+    height: 2.5rem;
+    width: 85%;
+}
+
 .pwd{
     border-style: solid;
     border-width: 2px;
