--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -18,7 +18,7 @@
         <h1 class="text">BalVikasGuru</h1>
         <a class="sign-up" href="/signup">Sign Up</a>
     </div>
-    <div class="content">
+    <div class="content login-box">
         <div class="form-container">
             <h2 class="text">Welcome Back!</h2>
             <form action="/home" method="post">
