--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,15 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Home</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="title">
         <h1 class="text">BalVikasGuru</h1>
-        <a class="sign-up" href="/signup">Home</a>
+        <a class="sign-up" href="/">Sign In</a>
     </div>
-    <div class="content">
-        
+    <div class="content login-box">
+        <div class="form-container">
+            <h2 class="text">Hello there!</h2>
+            <form action="/signup" method="post">
+                <input class="uid" type="text" name="name" placeholder="Name"><br>
+                <input class="mid" type="text" name="userID" placeholder="Username"><br>
+                <input class="mid" type="password" name="password" placeholder="Password"><br>
+                <input class="pwd" type="password" name="confirmPassword" placeholder="Confirm Password"><br>
+                <button class="btn" type="submit">Sign Up</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
