--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@ body{
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .title{
@@ -61,7 +61,10 @@ h2{
 
 .content{
     background-image: -webkit-linear-gradient(65deg, #B8E8FC 50%, #C8FFD4 50%);
-    height: 100%;
+    height: 100%;   
+}
+
+.login-box{
     padding-top: 100px;
 }
 
@@ -128,5 +131,57 @@ h2{
 }
 
 input:focus{
+    outline: none;
+}
+
+.entries-container{
+    width: 80%;
+    height: 80%;
+    padding: 30px 0px;
+    margin: auto;
+}
+
+.entry-list{
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
+}
+
+.entry-list li{
+    background-color: rgba(177, 175, 255, 0.4);
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.entry-list h3{
+    margin: 0
+}
+
+.entry-list p{
+    margin: 10px 0px;
+}
+
+.title-input{
+    height: 2rem;
+    /* width: 100%; */
+    background-color: rgba(177, 175, 255, 0.4);
+    border: none;
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.content-input{
+    height: auto;
+    /* width: 100%; */
+    background-color: rgba(177, 175, 255, 0.4);
+    border: none;
+    padding: 30px;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.content-input:focus{
     outline: none;
 }
